2007-03-27 [wwp]	1.94.0cvs8

	* src/vcalendar.c
		Don't answer if no organizer, thanks to Colin.

2007-03-27 [wwp]	1.94.0cvs7

	* libical/libical/Makefile.am
	* libical/libical/icaltime.c
		Don't crash when processing broken times,
		thanks to Colin (fffast-fffix man).

2007-03-22 [colin]	1.94.0cvs6

	* src/vcal_prefs.c
	* src/vcal_prefs.h
	* src/vcalendar.c
		Don't register to Orage without user
                interaction - mainly because Orage from
                Xfce 4.4 didn't handle command line
                parameters

2007-03-22 [colin]	1.94.0cvs5

	* src/vcalendar.c
		Orage, the XFCE clock, will handle "foreign
		files". This will allow us to push our calendar
		to it. This patch does that - no effect on
		older Orage versions which don't handle it.

2007-03-21 [wwp]	1.94.0cvs4

	* configure.ac
		Bumped up the minimal Claws-Mail version this
		plugin requires.

2007-03-21 [wwp]	1.94.0cvs3

	* src/.cvsignore
	* src/vcal_folder.c
	* src/vcal_meeting_gtk.c
		Reflect changes to the log API (2.8.1cvs30).
		More files to ignore.

2007-03-16 [colin]	1.94.0cvs2

	* src/vcal_folder.c
		Fix export not being done when it should

2007-03-12 [colin]	1.94.0cvs1

	* src/vcal_folder.c
		Fix timeout handling. Patch by Pawel Pekala

2007-02-26 [paul]	1.94

	1.94 released

2007-02-26 [colin]	1.93.0cvs15

	* po/ca.po
		Fix msgfmt error

2007-02-26 [paul]	1.93.0cvs14

	* configure.ac
	* po/ca.po
	* po/hu.po
		added by Miquel Oliete and Pader Rezso
	* po/de.po
	* po/es.po
	* po/fi.po
	* po/pl.po
	* po/pt_BR.po
	* po/sk.po
	* po/zh_CN.po
		updated by Stephan Sachse, Ricardo Mones Lastra,
		Flammie Pirinen, Pawel Pekala, Frederico Goncalves
		Guimaraes, Andrej Kacian, and Ralgh Young

2007-02-21 [colin]	1.93.0cvs13

	* src/vcal_manager.c
		Fix little leak

2007-02-19 [colin]	1.93.0cvs12

	* src/vcal_folder.c
	* src/vcal_manager.c
		Don't use CN attribute in ORGANIZER or ATTENDEE
		fields, to avoid putting accentued chars there:
		it breaks this crappy Outlook
