@@ -99,3 +99,4 @@
 ( cvs diff -u -r 1.1.2.19 -r 1.1.2.20 src/vcal_prefs.c;  cvs diff -u -r 1.1.2.7 -r 1.1.2.8 src/vcal_prefs.h;  cvs diff -u -r 1.2.2.52 -r 1.2.2.53 src/vcalendar.c;  ) > 1.94.0cvs6.patchset
 ( cvs diff -u -r 1.1.2.1 -r 1.1.2.2 libical/libical/Makefile.am;  cvs diff -u -r 1.1.2.1 -r 1.1.2.2 libical/libical/icaltime.c;  ) > 1.94.0cvs7.patchset
 ( cvs diff -u -r 1.2.2.53 -r 1.2.2.54 src/vcalendar.c;  ) > 1.94.0cvs8.patchset
+( cvs diff -u -r 1.1.2.28 -r 1.1.2.29 src/plugin.c;  cvs diff -u -r 1.2.2.65 -r 1.2.2.66 src/vcal_folder.c;  ) > 1.94.0cvs9.patchset
