@@ -36,7 +36,7 @@ gint plugin_init(gchar **error)
 	bindtextdomain(TEXTDOMAIN, LOCALEDIR);
 	bind_textdomain_codeset (TEXTDOMAIN, "UTF-8");
 
-	if (!check_plugin_version(MAKE_NUMERIC_VERSION(2, 6, 1, 101),
+	if (!check_plugin_version(MAKE_NUMERIC_VERSION(2, 8, 1, 72),
 				VERSION_NUMERIC, _("vCalendar"), error))
 		return -1;
 
