@@ -1,3 +1,9 @@
+2007-03-31 [colin]	1.94.0cvs9
+
+	* src/plugin.c
+	* src/vcal_folder.c
+		Offline override: follow API
+
 2007-03-27 [wwp]	1.94.0cvs8
 
 	* src/vcalendar.c
